fixed scrolling overflow on code blocks

--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -119,7 +119,7 @@ nav.code {
 }
 
 nav.code {
-    overflow-x:scroll;
+    overflow-x:auto;
     color:#68becb;
 }
 
